Code Review Comments

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -1,3 +1,6 @@
+<!--Proper indentation needed below-->
+<!--Meaningful selector names to be used -->
+<!--See the other review comments in other index.html files -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
