--- a/hw3/exercise/index.html
+++ b/hw3/exercise/index.html
@@ -1,3 +1,6 @@
+<!--Proper indentation needed below-->
+<!--Meaningful selector names to be used -->
+<!--See the other review comments in other index.html files -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -111,7 +114,7 @@
 $(document).ready(function(){
 $('.sel1').selectr({
 select:function(e,sel1){
-alert("hhu");
+alert("hhu"); //Avoid using alerts and console log in prod code
 }
 });
 });
